resources/styles.css
* {
  margin: 0;
}

html {
  font-size: 10px;
  font-family: AmericanTypewriter, serif;
  text-align: center;
  margin: 0;
}

body {
  background-color: #dbd9d9;
  margin: 0;
  width: 100%;
}

.mobileNav {
  display: none;
}

.flex {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

header {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1;
  height: 10rem;
  width: 100%;
  background-color: #fcf9f9;
}

h1 {
  font-family: "Cinzel", serif;
  font-size: 3.8rem;
  padding-left: 2rem;
  margin-top: 2.5rem;
}

@media only screen and (min-width: 835px) and (max-width: 1200px) {
  h1 {
    font-size: 3.4rem;
    margin-bottom: 0;
  }
}

@media only screen and (min-width: 769px) and (max-width: 834px) {
  h1 {
    font-size: 2.8rem;
    margin-bottom: 0;
    padding-top: 2rem;
  }
}

@media only screen and (min-width: 668px) and (max-width: 768px) {
  h1 {
    font-size: 2.4rem;
    margin-bottom: 0;
  }
}

@media only screen and (min-width: 481px) and (max-width: 667px) {
  h1 {
    font-size: 2rem;
    margin-bottom: 0;
    margin-right: 35rem;
  }
}

@media only screen and (max-width: 480px) {
  h1 {
    font-size: 1.8rem;
    padding-top: 2rem;
  }
}

@media only screen and (max-width: 320px) {
  h1 {
    font-size: 1.5rem;
    padding-top: 2rem;
  }
}

#nav-links {
  height: 10rem;
}

nav {
  display: block;
  flex-grow: 2;
  height: 10rem;
  text-align: right;
}

@media only screen and (min-width: 835px) and (max-width: 1200px) {
  #nav-links {
    height: 5rem;
  }

  nav .lgScreen {
    height: 3rem;
    padding: 5rem 1rem 0 0;
  }

  nav .lgScreen a {
    font-size: 1.5rem;
  }
}

@media only screen and (min-width: 769px) and (max-width: 834px) {
  #nav-links {
    height: 5rem;
  }

  nav .lgScreen {
    height: 3rem;
    padding: 5rem 1rem 0 0;
  }

  nav .lgScreen a {
    font-size: 1.5rem;
  }
}

@media only screen and (min-width: 668px) and (max-width: 768px) {
  #nav-links {
    height: 5rem;
  }

  nav .lgScreen {
    height: 3rem;
    padding: 5.5rem 1rem 0 0;
  }

  nav .lgScreen a {
    font-size: 1.5rem;
  }
}

@media only screen and (min-width: 481px) and (max-width: 667px) {
  #nav-links {
    height: 5rem;
  }

  nav .lgScreen {
    height: 2rem;
    padding: 2rem 1rem 0 0;
  }
  nav .lgScreen a {
    font-size: 1.5rem;
  }
}

@media only screen and (max-width: 480px) {
  nav .lgScreen {
    display: none;
  }

  nav #mobile-nav {
    display: inline-block;
    height: 3rem;
    padding: 1.2rem 1rem 0rem 0rem;
    margin-top: 6rem;
  }

  nav #mobile-nav a {
    height: 3rem;
    padding: 0rem;
    font-size: 1rem;
  }
}

nav span {
  display: inline-block;
  padding: 3.5rem 2rem 0rem 2rem;
  height: 3rem;
}

a {
  font-size: 2rem;
  color: black;
  text-decoration: none;
  height: 1rem;
}

nav a:hover {
  text-decoration: underline;
}

main {
  margin-top: 10rem;
  width: 100%;
}

#about {
  height: 40rem;
  background-image: url(../resources/images/freestocks-OfaDD5o8hpk-unsplash.jpg);
  background-position: center;
  background-size: cover;
}

#about-text {
  padding-top: 5rem;
}

#about h2 {
  font-size: 7.2rem;
  padding: 5rem 0;
  background-color: rgb(252, 249, 249, 0.5);
}

#about h3 {
  font-size: 3.4rem;
  padding: 2rem 0 5rem 0;
  background-color: rgb(252, 249, 249, 0.5);
}

#who-we-are {
  height: 30rem;
  width: 80%;
  margin: 0 auto;
}

#who-we-are h2 {
  font-size: 3rem;
  padding: 3rem;
}

#who-we-are p {
  width: 80%;
  margin: 0 auto;
  font-size: 1.8rem;
  text-align: left;
  padding-bottom: 3rem;
}

#who-we-are h4 {
  font-size: 2.2rem;
}

#readers {
  background-color: rgb(252, 249, 249, 0.5);
}

#reader-img {
  width: 90%;
  margin: 0 auto;
  height: 50rem;
}

#img-container {
  width: 100%;
  justify-content: space-around;
  align-items: center;
  height: 50rem;
}

#img-container img {
  width: 40rem;
  height: 27rem;
}

#reader-img-cap {
  padding-bottom: 5rem;
}

#reader-img-cap h4 {
  font-size: 2.4rem;
}

#book-of-the-month {
  height: 50rem;
  width: 75%;
  margin: 0 auto;
  justify-content: space-around;
}

.bookCard {
  width: 50%;
}

.bookCard h2 {
  font-size: 2.4rem;
  padding: 5rem 0;
}

.bookCard img {
  width: 20rem;
}

#join-us {
  height: 40rem;
  padding: 5rem 0;
}

#join-us h2 {
  font-size: 2.4rem;
  padding: 3rem 0;
}

form {
  width: 40%;
  height: 30rem;
  margin: 0 auto;
  background-color: #fcf9f9;
  border: 1px solid black;
  border-radius: 5px;
  text-align: center;
  line-height: 3rem;
  padding: 2rem;
}

form label {
  font-size: 1.8rem;
  padding-right: 1rem;
}

form input {
  width: 60%;
  height: 2rem;
}

form #join-button {
  width: 20%;
  height: 5rem;
  padding: 1rem;
  font-size: 1.2rem;
}

footer {
  height: 10rem;
  background-color: #fcf9f9;
  margin-top: 2rem;
}

footer span {
  height: 3rem;
  padding: 2rem 4rem;
  margin-top: 2rem;
}

footer h6 {
  font-size: 1.8rem;
  padding: 2rem;
  margin-top: 2rem;
}

footer #address {
  font-size: 1.8rem;
}

footer #credits {
  text-align: right;
  flex-grow: 2;
  font-size: 1.2rem;
  margin-top: 2.5rem;
}

@media only screen and (min-width: 769px) and (max-width: 1200px) {
  footer {
    height: auto;
    text-align: center;
  }

  footer h6 {
    width: 100%;
    margin: 0rem;
    font-size: 2.4rem;
    background-color: black;
    color: #fcf9f9;
  }

  footer span {
    margin-top: 0;
  }

  footer #credits {
    width: 100%;
    text-align: center;
    margin-top: 0;
  }
}

@media only screen and (min-width: 769px) and (max-width: 834px) {
  footer {
    height: auto;
    text-align: center;
  }

  footer h6 {
    width: 100%;
    margin: 0rem;
    font-size: 2.4rem;
    background-color: black;
    color: #fcf9f9;
  }

  footer span {
    margin-top: 0;
  }

  footer #credits {
    text-align: center;
    margin-top: 0;
  }
}

@media only screen and (min-width: 668px) and (max-width: 768px) {
  footer {
    height: auto;
    text-align: center;
  }

  footer h6 {
    width: 100%;
    margin: 0rem;
    font-size: 2.4rem;
    background-color: black;
    color: #fcf9f9;
  }

  footer span {
    margin-top: 0;
  }

  footer #credits {
    text-align: center;
    margin-top: 0;
  }
}

@media only screen and (min-width: 481px) and (max-width: 667px) {
  footer {
    height: auto;
    text-align: center;
  }

  footer h6 {
    width: 100%;
    margin: 0rem;
    font-size: 2.4rem;
    background-color: black;
    color: #fcf9f9;
  }

  footer span {
    width: 100%;
    height: 2rem;
    margin: 0rem;
  }

  footer #credits {
    flex-grow: 1;
    text-align: center;
    margin: 0rem;
  }
}

@media only screen and (max-width: 480px) {
  footer {
    height: auto;
    text-align: center;
  }

  footer h6 {
    width: 100%;
    margin: 0rem;
    font-size: 2.4rem;
    background-color: black;
    color: #fcf9f9;
  }

  footer span {
    height: 2rem;
    margin: 0rem;
  }

  footer #credits {
    flex-grow: 1;
    text-align: center;
    margin: 0rem;
  }
}

